fix color spectrum label issue on safari

--- a/src/components/Chart/style.scss
+++ b/src/components/Chart/style.scss
@@ -57,7 +57,7 @@ body {
   font-size: $fontSize;
   display: flex;
   flex-direction: column;;
-  row-gap: 20px;
+  // row-gap: 20px;
   padding-top: 30px;
 
   a {
@@ -92,7 +92,7 @@ body {
     margin: auto;
 
     > div {
-      margin: 10px 0;
+      margin: 5px 0;
     }
     // make dropdown drop over its siblings
     :nth-child(2) {
@@ -109,12 +109,11 @@ body {
     white-space:nowrap;
   }
 
-  .input-container, .input-label {
+  .input-container {
     @include vertical-center;
     justify-content: center;
     margin: auto;
     text-transform: uppercase;
-    max-width: 260px;
 
     input, button {
       font-size: $fontSizeNumber;
@@ -133,6 +132,7 @@ body {
       border-top: $border;
       border-bottom: $border;
       border-right: none;
+      max-width: 220px;
     }
 
     // hide input arrows
@@ -165,7 +165,7 @@ body {
   .input-container {
     margin-bottom: $spacing;
     position: relative;
-
+    max-width: 220px;
   }
 
   .input-container:before {
@@ -182,10 +182,13 @@ body {
   }
 
   .input-label {
+    display: inline-block;
+    margin: 5px 0;
+    text-transform: uppercase;
     font-weight: $bold;
     text-align: center;
     background-color: $colorPrimary;
-    background-image: linear-gradient(90deg, $colorPrimary, $colorSecondary);
+    background-image: linear-gradient(45deg, $colorPrimary, $colorSecondary);
     background-size: 100%;
     -webkit-background-clip: text;
     -moz-background-clip: text;
@@ -196,7 +199,7 @@ body {
   .intro {
     font-weight: 500;
     font-size: $fontSizeSmall;
-    margin-bottom: $spacing;
+    margin: calc(2 *$spacing) 0;
     display: flex;
     justify-content: center;
     :first-child{
